--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,18 +1,20 @@
-.profile__title{
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    margin: 0;
-    padding: 0;
-    display: block;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;  
+.profile__title {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  margin: 0;
+  padding: 0;
+  display: block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 282px;
 }
 
 @media screen and (min-width: 880px) {
-    .profile__title {
-      font-size: 18px;
-      line-height: 22px;
-    }
+  .profile__title {
+    font-size: 18px;
+    line-height: 22px;
+    max-width: 415px;
   }
+}
